src/main/java/com/example/demo_webPet/common/error/ErrorType.java
package com.example.demo_webPet.common.error;

public enum ErrorType {
    VALIDATION_ERROR, ACCESS_DENIED
}
